# senior-engineer-advisor

./: .env.example  .gitignore  CHANGELOG.md  README.md  README_EN.md  README_JA.md  SKILL.md  config.yaml  pyproject.toml  setup.sh  test.sh
.github/workflows/: pages.yml
adapters/claude-code/: CLAUDE.md
adapters/claude-code/commands/: advisor-dry.md  advisor-wiki.md  advisor.md
adapters/kilo/: config.yaml
adapters/openclaw/: config.yaml
adapters/opencode/: config.yaml
agents/: api.md  backend.md  database.md  devops.md  frontend.md  ml.md  performance.md  security.md
core/: cli.py  complexity.py  orchestrator.py  providers.py  wiki.py
docs/: clean-compare.html  comparison-report.html  comparison-voxel.html  dashboard-compare.html  index.html  model-gun-simulator.html  voxel-compare.html
docs/clean-compare/with-advisor/: jwt-auth-module.ts
docs/test-a/: index.html  package.json
docs/test-a-v4/: app.js  index.html  style.css
docs/test-b/: app.js  index.html  styles.css
docs/test-b-v4/: app.js  index.html  style.css
integrations/: advisor.sh  claude-code.md  kilo-advisor.sh  opencode.md
prompts/: advisor_system.md  agency_assignment.md  agent_system.md  code_review.md  complexity.md
scripts/: install.sh
scripts/convert/: agency-agents.sh  claude-code.sh  kilo.sh  openclaw.sh  opencode.sh
tests/assault-rifle-v4/: TEST_REPORT_V4.md
tests/voxel-gun/: COMPARISON_REPORT.md  COMPARISON_REPORT_V1.md  TEST_A_SUMMARY.md  index.html
tests/voxel-gun-backup/: README_TEST_B.md  TEST_B_SUMMARY.md  test_b_direct_impl.sh
workflows/: main.yaml
(+83 files in other folders)
