[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "senior-engineer-advisor"
version = "4.0.0"
description = "Multi-model advisor: cheap model implements, Opus advises, LLM Wiki accumulates knowledge"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
advisor = "core.cli:main"

[tool.setuptools.packages.find]
include = ["core*"]
